<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="log_filter_tag_0"
        android:persistent="false"
        android:title="@string/log_filter_verbose" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_1"
        android:persistent="false"
        android:title="@string/log_filter_debug" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_2"
        android:persistent="false"
        android:title="@string/log_filter_info" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_3"
        android:persistent="false"
        android:title="@string/log_filter_warning" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_4"
        android:persistent="false"
        android:title="@string/log_filter_error" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_5"
        android:persistent="false"
        android:title="@string/log_filter_group_1" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_6"
        android:persistent="false"
        android:title="@string/log_filter_group_2" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_7"
        android:persistent="false"
        android:title="@string/log_filter_group_3" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_8"
        android:persistent="false"
        android:title="@string/log_filter_group_4" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_9"
        android:persistent="false"
        android:title="@string/log_filter_group_5" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_10"
        android:persistent="false"
        android:title="@string/log_filter_group_6" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_11"
        android:persistent="false"
        android:title="@string/log_filter_group_7" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_12"
        android:persistent="false"
        android:title="@string/log_filter_group_8" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_13"
        android:persistent="false"
        android:title="@string/log_filter_group_9" >
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="log_filter_tag_14"
        android:persistent="false"
        android:title="@string/log_filter_group_10" >
    </CheckBoxPreference>

</PreferenceScreen>